--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "serve:ssr:angular-practice": "node dist/angular-practice/server/server.mjs",
     "storybook": "ng run angular-practice:storybook",
-    "build-storybook": "ng run angular-practice:build-storybook"
+    "build-storybook": "ng run angular-practice:build-storybook",
+    "chromatic": "npx chromatic --project-token=chpt_7e28dc368094557"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "chromatic": "^11.20.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
