--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "storybook": "^8.4.7",
-    "typescript": "~5.4.2",
-    "webpack-stats-plugin": "^1.1.3"
+    "typescript": "~5.4.2"
   }
 }
