fix: sb build option

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -35,6 +35,9 @@ jobs:
             echo "Chromatic token is not set"
           fi
 
+      - name: Run Storybook Build
+        run: pnpm build-storybook
+
       - name: Run Chromatic
         uses: chromaui/action@latest
         with:
